Feat(CP-16): Broker requests document (#19)
* Initial documents set up

* Frontend for documents upload

* \Adding email notifications

* Ensuring frontend structure is maintained

* File upload

* Add missing tests for 90% code coverage

* Removed logs used for debugging

* Removing files used for debugging

* Remove agent and documentation files from PR

* Fix lint errors